--- a/Slovak/main/MiuiFreeformService.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiFreeformService.apk/res/values-sk/strings.xml
@@ -37,4 +37,7 @@
     
 <string name="freeform_guide_to_sidehide_summary">Rýchlo potiahnite okno za panel akcií k okraju obrazovky</string>
      <string name="freeform_guide_to_sidehide_title">Skrytie plávajúcich okien</string>    
+     
+    <string name="bottom_bar_smallwindow_drag_text">Potiahnite tu pre pripnutie</string>
+    <string name="fullscreen_slide_to_small_freeform_summary_squarehot">Potiahnite zo spodu k hornej hrane displeja</string>         
 </resources>
