--- a/Slovak/main/SecurityCenter.apk/res/values-sk/strings.xml
+++ b/Slovak/main/SecurityCenter.apk/res/values-sk/strings.xml
@@ -5634,4 +5634,6 @@ Skúste zväčšiť rozlíšenie!"</string>
 <string name="app_predict_folder_tips">Návrhy na základe vášho používania</string>
      <string name="app_predict_settings_train_tip">Automatická optimalizácia návrhov</string>
      <string name="gb_game_tips_restart">Hra sa reštartuje, aby sa použili zmeny</string>
+     
+<string name="gb_performace_guide_disable_desc">Nie je možné prepnúť do vyváženého režimu v Zrýchlení hier, keď je zapnutý režim výkonu v celom systéme. Nastavenia batérie môžete zmeniť v Nastaveniach</string>     
 </resources>
