--- a/Slovak/main/TeleService.apk/res/values-sk/strings.xml
+++ b/Slovak/main/TeleService.apk/res/values-sk/strings.xml
@@ -1974,4 +1974,5 @@ Napriek tomu aktivovať eSIM?"</string>
      <string name="jp_sb_unlock_success">Úspešné overenie odomykacieho kódu.</string>
 
 <string name="data_interruption_remind">Zdá sa, že vaše sieťové prostredie nie je spoľahlivé. Ak chcete zlepšiť pripojenie, povoľte používanie mobilných dát počas hovorov VoLTE na druhej SIM.</string>	
+<string name="low_battery_flash_when_ring_button_tip">Pri zvonení nie je možné použiť blesk z dôvodu slabej batérie</string>
 </resources>
