--- a/Slovak/main/Mms.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Mms.apk/res/values-sk/strings.xml
@@ -120,7 +120,7 @@
     <string name="confirm_delete_locked_message">Chcete vymazať túto obľúbenú správu?</string>
     <string name="confirm_delete_message">Táto správa bude vymazaná.</string>
     <string name="confirm_dialog_locked_title">Upozornenie</string>
-    <string name="confirm_dialog_title">Vymazať</string>
+    <string name="confirm_dialog_title">Vymazať?</string>
     <string name="confirm_dlg__msg">CMCC notice: CMCC free post-service will not be provided if you cancel the service.Are you sure to cancel?</string>
     <string name="confirm_dlg_title">Správa zariadení</string>
     <string name="confirm_export_dialog_description">Odstrániť vybraný súkromný kontakt, konverzácie budú premiestnené do bežných SMS. Chcete pokračovať?</string>
